fix underline visibility

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ a {
   text-align: end;
   width: 100%;
   left: 0;
-  background: whitesmoke;
+  background: rgb(187, 187, 187);
 }
 
 h1 {
